# FerrumCast

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: build.sh  check_env.sh  run.sh
src/: config.rs  gdi_capture.rs  ipc.rs  main.rs  pipeline.rs  portal.rs  stream.rs  webrtc.rs
src/pipeline/: encoders.rs  generic.rs  linux.rs  windows.rs
