[package]
name = "ferrumcast"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gstreamer = { version = "0.23", features = ["v1_22"] }
anyhow = "1.0"
futures = "0.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
gstreamer-app = { version = "0.23", features = ["v1_22"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", default-features = false, features = ["tokio", "pipewire"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
